Add Solutions for patterns 44 to 56 in Practice File 2

--- a/Pattern Questions for Practice 2 Solutions.ipynb
+++ b/Pattern Questions for Practice 2 Solutions.ipynb
@@ -2572,7 +2572,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 44:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
-    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 3</h2>\n",
     "1 \n",
     "2 3 4 \n",
     "5 6 7 8 9\n",
@@ -2584,11 +2584,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "39ba1980",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 3\n",
+      "1\n",
+      "2 3 4\n",
+      "5 6 7 8 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "num = 1\n",
+    "for row in range(n):\n",
+    "    for col in range(4*row+1):\n",
+    "        if col%2!=0:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print(num, end='')\n",
+    "            num += 1\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2603,6 +2625,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 45:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "    1\n",
     "   232\n",
     "  34543\n",
@@ -2616,11 +2639,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "25a8f114",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "    1\n",
+      "   232\n",
+      "  34543\n",
+      " 4567654\n",
+      "567898765\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n-row-1):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(row+1, 2*row+2):\n",
+    "        print(col, end='')\n",
+    "    for col in range(2*row, row, -1):\n",
+    "        print(col, end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2635,6 +2681,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 46:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 7</h2>\n",
     "1234567\n",
     " 234567\n",
     "  34567\n",
@@ -2656,11 +2703,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "aa025b09",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 7\n",
+      "1234567\n",
+      " 234567\n",
+      "  34567\n",
+      "   4567\n",
+      "    567\n",
+      "     67\n",
+      "      7\n",
+      "     67\n",
+      "    567\n",
+      "   4567\n",
+      "  34567\n",
+      " 234567\n",
+      "1234567\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        spaces = row\n",
+    "    else:\n",
+    "        spaces -= 1\n",
+    "    for col in range(n):\n",
+    "        if col < spaces:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print(col+1, end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2675,6 +2756,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 47:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "10 \n",
     "10 8 \n",
     "10 8 6 \n",
@@ -2688,11 +2770,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "dccaa8ef",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "10\n",
+      "10 8\n",
+      "10 8 6\n",
+      "10 8 6 4\n",
+      "10 8 6 4 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(2*n, 2*(n-row)-1, -1):\n",
+    "        if col%2!=0:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print(col, end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2707,6 +2811,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 48:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 6</h2>\n",
     "0 1 2 3 4 5 \n",
     "0 1 2 3 4 \n",
     "0 1 2 3 \n",
@@ -2721,11 +2826,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "62a03fb0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 6\n",
+      "0 1 2 3 4 5\n",
+      "0 1 2 3 4\n",
+      "0 1 2 3\n",
+      "0 1 2\n",
+      "0 1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(2*(n-row-1)+1):\n",
+    "        if col%2!=0:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print(int(col/2), end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2740,6 +2868,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 49:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "    A\n",
     "   B C\n",
     "  D E F\n",
@@ -2753,11 +2882,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "fa46b9fc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "     A\n",
+      "    B C\n",
+      "   D E F\n",
+      "  G H I J\n",
+      " K L M N O\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "char = ord('A')\n",
+    "for row in range(n):\n",
+    "    for col in range(n-row):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(2*row+1):\n",
+    "        if col % 2 != 0:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print(chr(char), end='')\n",
+    "            char += 1\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2772,6 +2927,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 50:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "    A\n",
     "   ABC\n",
     "  ABCDE\n",
@@ -2785,11 +2941,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "7c8286c7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "     A\n",
+      "    ABC\n",
+      "   ABCDE\n",
+      "  ABCDEFG\n",
+      " ABCDEFGHI\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n-row):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(ord('A'), ord('A')+2*row+1):\n",
+    "        print(chr(col), end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2804,6 +2981,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 51:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "    A\n",
     "   A B\n",
     "  A   B\n",
@@ -2821,11 +2999,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "b33ed31b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "    A\n",
+      "   A B\n",
+      "  A   B\n",
+      " A     B\n",
+      "A       B\n",
+      " A     B\n",
+      "  A   B\n",
+      "   A B\n",
+      "    A\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        spaces = n - row - 1\n",
+    "        middle = 2*row+1\n",
+    "    else:\n",
+    "        spaces += 1\n",
+    "        middle -= 2\n",
+    "    for col in range(spaces):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(middle):\n",
+    "        if col == 0:\n",
+    "            print('A', end='')\n",
+    "        elif col == middle-1:\n",
+    "            print('B', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2840,6 +3054,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 52:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 6</h2>\n",
     "A \n",
     "B B \n",
     "C C C \n",
@@ -2854,11 +3069,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "782df51a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 6\n",
+      "A\n",
+      "B B\n",
+      "C C C\n",
+      "D D D D\n",
+      "E E E E E\n",
+      "F F F F F F\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "char = ord('A')\n",
+    "for row in range(n):\n",
+    "    for col in range(2*row+1):\n",
+    "        if col % 2 != 0:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print(chr(char), end='')\n",
+    "    char += 1\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2873,6 +3113,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 53:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "    A\n",
     "   A B\n",
     "  A B C\n",
@@ -2890,11 +3131,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "338a2bee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "    A\n",
+      "   A B\n",
+      "  A B C\n",
+      " A B C D\n",
+      "A B C D E\n",
+      " F G H I\n",
+      "  K L M\n",
+      "   O P\n",
+      "    R\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        char = ord('A')\n",
+    "        spaces = n - row - 1\n",
+    "        middle = 2*row+1\n",
+    "    else:\n",
+    "        if row != n:\n",
+    "            char += 1\n",
+    "        spaces += 1\n",
+    "        middle -= 2\n",
+    "    for col in range(spaces):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(middle):\n",
+    "        if col % 2 != 0:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print(chr(char), end='')\n",
+    "            char += 1\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2909,6 +3188,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 54:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 6</h2>\n",
     "A B C D E F \n",
     "A B C D E \n",
     "A B C D \n",
@@ -2923,11 +3203,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "917b6b9c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 6\n",
+      "A B C D E F\n",
+      "A B C D E\n",
+      "A B C D\n",
+      "A B C\n",
+      "A B\n",
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    char = ord('A')\n",
+    "    for col in range(2*(n-row)-1):\n",
+    "        if col % 2 != 0:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print(chr(char), end='')\n",
+    "            char += 1\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2942,6 +3247,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 55:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "A\n",
     "ABA\n",
     "ABCBA\n",
@@ -2955,11 +3261,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "4ecb8e07",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "A\n",
+      "ABA\n",
+      "ABCBA\n",
+      "ABCDCBA\n",
+      "ABCDEDCBA\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(ord('A'), ord('A')+row+1):\n",
+    "        print(chr(col), end='')\n",
+    "    for col in range(ord('A')+row-1, ord('A')-1, -1):\n",
+    "        print(chr(col), end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2974,6 +3301,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 56:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "1\n",
     "2*2\n",
     "3*3*3\n",
@@ -2991,11 +3319,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "e5e6a3f3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "1\n",
+      "2*2\n",
+      "3*3*3\n",
+      "4*4*4*4\n",
+      "5*5*5*5*5\n",
+      "4*4*4*4\n",
+      "3*3*3\n",
+      "2*2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        middle = 2*row+1\n",
+    "    else:\n",
+    "        middle -= 2\n",
+    "    for col in range(middle):\n",
+    "        if col % 2 != 0:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(int(middle/2+1), end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
