Add Solutions for patterns 57 to 60 in Practice File 2

--- a/Pattern Questions for Practice 2 Solutions.ipynb
+++ b/Pattern Questions for Practice 2 Solutions.ipynb
@@ -3368,6 +3368,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 57:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 3</h2>\n",
     "*\n",
     "*1*\n",
     "*121*\n",
@@ -3383,11 +3384,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ae642b3d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 3\n",
+      "*\n",
+      "*1*\n",
+      "*121*\n",
+      "*12321*\n",
+      "*121*\n",
+      "*1*\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n+1):\n",
+    "    num = 0\n",
+    "    if row <= n:\n",
+    "        middle = 2*row+1\n",
+    "    else:\n",
+    "        middle -= 2\n",
+    "    for col in range(middle):\n",
+    "        if col in [0, middle-1]:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            if col < (middle+1)/2:\n",
+    "                num += 1\n",
+    "                print(num, end='')\n",
+    "            else:\n",
+    "                num -= 1\n",
+    "                print(num, end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3402,10 +3437,11 @@
     "<h2 style=\"font-size: 20px;\">Pattern 58:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 4</h2>\n",
     "1\n",
     "2*3\n",
     "4*5*6\n",
-    "4*5*6*7\n",
+    "7*8*9*10\n",
     "4*5*6\n",
     "2*3\n",
     "1\n",
@@ -3417,11 +3453,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "3b7ebab6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 4\n",
+      "1\n",
+      "2*3\n",
+      "4*5*6\n",
+      "7*8*9*10\n",
+      "4*5*6\n",
+      "2*3\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "num = 1\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        cols = 2*row+1\n",
+    "    else:\n",
+    "        cols -= 2\n",
+    "        num = (num - (2*n-row)) - int((cols+1)/2)\n",
+    "    for col in range(cols):\n",
+    "        if col%2 != 0:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(num, end='')\n",
+    "            num += 1\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3436,6 +3503,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 59:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 6</h2>\n",
     "*\n",
     "--\n",
     "***\n",
@@ -3455,11 +3523,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e4c11e76",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 6\n",
+      "*\n",
+      "--\n",
+      "***\n",
+      "----\n",
+      "*****\n",
+      "------\n",
+      "*****\n",
+      "----\n",
+      "***\n",
+      "--\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        middle = row+1\n",
+    "    else:\n",
+    "        middle -= 1\n",
+    "    for col in range(middle):\n",
+    "        if row%2 == 0:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print('-', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3474,6 +3574,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 60:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "         * \n",
     "        * * \n",
     "       * * * \n",
@@ -3502,8 +3603,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "id": "da0ea350",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "         *\n",
+      "        * *\n",
+      "       * * *\n",
+      "       * * *\n",
+      "      * * * *\n",
+      "     * * * * *\n",
+      "    * * * * * *\n",
+      "   * * * * * * *\n",
+      "      * * * *\n",
+      "     * * * * *\n",
+      "    * * * * * *\n",
+      "   * * * * * * *\n",
+      "  * * * * * * * *\n",
+      " * * * * * * * * *\n",
+      "* * * * * * * * * *\n",
+      "       * * *\n",
+      "       * * *\n",
+      "       * * *\n",
+      "       * * *\n",
+      "       * * *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n-2):\n",
+    "    for col in range((2*n-1)-row):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(2*row+1):\n",
+    "        if col%2 == 0:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()\n",
+    "\n",
+    "for row in range(n):\n",
+    "    for col in range(n+2-row):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(2*(row+n-2)-1):\n",
+    "        if col%2 == 0:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()\n",
+    "    \n",
+    "for row in range(n+2):\n",
+    "    for col in range(n+1-row):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(2*(row+n-1)-1):\n",
+    "        if col%2 == 0:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()\n",
+    "    \n",
+    "for row in range(n):\n",
+    "    for col in range(2*n-3):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(n):\n",
+    "        if col%2 == 0:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "aa42c7f8",
+   "id": "810e2dc4",
    "metadata": {},
    "outputs": [],
    "source": []
