Update code of patterns 10, 12 and 20

--- a/Pattern Questions for Practice 2 Solutions.ipynb
+++ b/Pattern Questions for Practice 2 Solutions.ipynb
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "e7dae82b",
    "metadata": {},
    "outputs": [
@@ -614,18 +614,18 @@
      "output_type": "stream",
      "text": [
       "Enter Number: 4\n",
-      "   *\n",
-      "  * *\n",
-      " *   *\n",
-      "*     *\n"
+      "      *\n",
+      "    *   *\n",
+      "  *       *\n",
+      "*           *\n"
      ]
     }
    ],
    "source": [
     "n = int(input('Enter Number: '))\n",
     "for row in range(n):\n",
-    "    for col in range(n+row):\n",
-    "        if col in [n-row-1, n+row-1]:\n",
+    "    for col in range(2*(n+row)-1):\n",
+    "        if col in [2*(n-row-1), 2*(n+row-1)]:\n",
     "            print('*', end='')\n",
     "        else:\n",
     "            print(' ', end='')\n",
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "id": "bf4404b0",
    "metadata": {},
    "outputs": [
@@ -737,21 +737,27 @@
      "output_type": "stream",
      "text": [
       "Enter Number: 4\n",
-      "*     *\n",
-      " *   * \n",
-      "  * *  \n",
-      "   *   \n",
-      "  * *  \n",
-      " *   * \n",
-      "*     *\n"
+      "*           *\n",
+      "  *       *\n",
+      "    *   *\n",
+      "      *\n",
+      "    *   *\n",
+      "  *       *\n",
+      "*           *\n"
      ]
     }
    ],
    "source": [
     "n = int(input('Enter Number: '))\n",
     "for row in range(2*n-1):\n",
-    "    for col in range(2*n-1):\n",
-    "        if col in [row, 2*(n-1)-row]:\n",
+    "    if row < n:\n",
+    "        cols = 4*n-3 - 2*row\n",
+    "        star = 2*row\n",
+    "    else:\n",
+    "        cols += 2\n",
+    "        star -= 2\n",
+    "    for col in range(cols):\n",
+    "        if col in [star, cols-1]:\n",
     "            print('*', end='')\n",
     "        else:\n",
     "            print(' ', end='')\n",
@@ -1166,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f6be855b",
    "metadata": {},
    "outputs": [
@@ -1176,11 +1182,11 @@
      "text": [
       "Enter Number: 4\n",
       "*\n",
-      " **\n",
-      "  ***\n",
-      "   ****\n",
-      "  ***\n",
-      " **\n",
+      "  * *\n",
+      "    * * *\n",
+      "      * * * *\n",
+      "    * * *\n",
+      "  * *\n",
       "*\n"
      ]
     }
@@ -1193,12 +1199,14 @@
     "        spaces = 2*row\n",
     "    else:\n",
     "        stars -= 2\n",
-    "        spaces -= 1\n",
+    "        spaces -= 2\n",
+    "    for col in range(spaces):\n",
+    "        print(' ', end='')\n",
     "    for col in range(stars):\n",
-    "        if col < spaces:\n",
-    "            print(' ', end='')\n",
-    "        else:\n",
+    "        if col%2 == 0:\n",
     "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
     "    print()"
    ]
   },
