Add a new pattern

--- a/Pattern Questions for Practice 2 Solutions.ipynb
+++ b/Pattern Questions for Practice 2 Solutions.ipynb
@@ -3687,9 +3687,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8fbe2895",
+   "metadata": {},
+   "source": [
+    "<!DOCTYPE html>\n",
+    "<html>\n",
+    "<head>\n",
+    "</head>\n",
+    "<body>\n",
+    "<h2 style=\"font-size: 20px;\">Pattern 61:</h2>\n",
+    "<pre>\n",
+    "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5 (odd number only)</h2>\n",
+    "* * * * *\n",
+    "*   *   *\n",
+    "* * * * *\n",
+    "*   *   *\n",
+    "* * * * *\n",
+    "</span>\n",
+    "</pre>\n",
+    "</body>\n",
+    "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "41da05a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter any odd number: 5\n",
+      "* * * * *\n",
+      "*   *   *\n",
+      "* * * * *\n",
+      "*   *   *\n",
+      "* * * * *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter any odd number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(2*n-1):\n",
+    "        if (row in [0, (n-1)/2, n-1] or col in [0, n-1, 2*(n-1)]) and col%2==0:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "810e2dc4",
+   "id": "c9bbc10e",
    "metadata": {},
    "outputs": [],
    "source": []
