--- a/Pattern Questions for Practice 2.ipynb
+++ b/Pattern Questions for Practice 2.ipynb
@@ -1537,12 +1537,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa42c7f8",
+   "cell_type": "markdown",
+   "id": "7e26d70b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<!DOCTYPE html>\n",
+    "<html>\n",
+    "<head>\n",
+    "</head>\n",
+    "<body>\n",
+    "<h2 style=\"font-size: 20px;\">Pattern 61:</h2>\n",
+    "<pre>\n",
+    "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5 (odd number only)</h2>\n",
+    "* * * * *\n",
+    "*   *   *\n",
+    "* * * * *\n",
+    "*   *   *\n",
+    "* * * * *\n",
+    "</span>\n",
+    "</pre>\n",
+    "</body>\n",
+    "</html>"
+   ]
   }
  ],
  "metadata": {
